<resources>
    <string name="app_name">Android</string>
    <string name="google_maps_key">AIzaSyCAsU-buJQSH1QW-LR9bPKGv2l8cEO8Mas</string>
    <string name="menu_map">Map</string>
    <string name="menu_account">Account</string>
    <string name="menu_message">Messages</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_report_history">Report History</string>
    <string name="menu_transaction_history">Transaction History</string>
    <string name="report_button_text">%1$s REPORT(S)</string>
    <string name="station_name">Station name: %1$s</string>
    <string name="station_capacity">Capacity: %1$s/%2$s</string>
    <string name="transaction_create_invalid_time">You may only start a new transaction between 7 and 21.</string>
    <string name="transaction_obtained_preview_price">Cost of transaction: %1$s</string>
    <string name="transaction_failed_preview_price">Failed to preview transactions price.</string>
    <string name="transaction_create_invalid_arrival_time">Arrival time cannot be empty or in the past.</string>
    <string name="transaction_create_invalid_pin">Invalid PIN number.</string>
    <string name="transaction_create_invalid_arrival_station">No arrival station selected.</string>
    <string name="transaction_create_invalid_payment_method">No payment method found. Please create one in "Account" menu.</string>
    <string name="discount_lv_station_name">To station</string>
    <string name="discount_lv_value">Value percentage</string>
    <string name="discount_lv_number_left">Number left</string>
    <string name="discount_lv_end_date">End date</string>
    <string name="discount_lv_station_name_text">To: %1$s</string>
    <string name="discount_lv_value_text">Value percentage: %1$s</string>
    <string name="discount_lv_number_left_text">Nr. left: %1$s</string>
    <string name="discount_lv_end_date_text">Expires: %1$s</string>
    <string name="report_description">Report description</string>
    <string name="report_severity">Severity (1 to 10)</string>
    <string name="report_submit">Submit report</string>
    <string name="report_wrong_description_size">Report description must be between 10 and 500 characters.</string>
    <string name="report_wrong_severity">Report severity must be between 1 and 10.</string>
    <string name="report_empty_severity">Report severity cannot be empty.</string>
    <string name="far_from_station">You are too far away from the station.</string>
    <string name="bicycle_lv_status">Bicycle status</string>
    <string name="bicycle_lv_arrival_time">Arrival time: N/A</string>
    <string name="bicycle_lv_model">Bicycle model</string>
    <string name="bicycle_lv_lock_number">Lock number: N/A</string>
    <string name="bicycle_lv_select">Select</string>
    <string name="bicycle_lv_reports">Reports</string>
    <string name="bicycle_status">Status: %1$s</string>
    <string name="bicycle_model">Model: %1$s</string>
    <string name="bicycle_arrival_time">Arrival time: %1$s</string>
    <string name="bicycle_lock_number">Lock number: %1$s</string>
    <string name="account_new_email">New email</string>
    <string name="account_old_password">Current password</string>
    <string name="account_new_password">New password</string>
    <string name="account_change_password_button">Change password</string>
    <string name="account_change_email_button">Change email</string>
    <string name="account_placeholder_text">N/A</string>
    <string name="account_start_station">Start station :</string>
    <string name="account_planned_station">Planned station :</string>
    <string name="account_start_time">Start time :</string>
    <string name="account_planned_time">Planned time :</string>
    <string name="account_warnings">Number of warnings :</string>
    <string name="account_too_many_active_transactions">You have more than one active transaction. Please contact an administrator.</string>
    <string name="account_no_active_transaction_found">You do not have an active transaction.</string>
    <string name="account_failed_to_get_active_transaction">You do not have an active transaction.</string>
    <string name="account_invalid_new_email">The email is not valid.</string>
    <string name="account_successfully_change_email">Your email has been successfully changed.</string>
    <string name="account_failure_change_email">Wrong current password.</string>
    <string name="account_empty_current_password">Current password field cannot be empty.</string>
    <string name="account_empty_new_password">New password field cannot be empty.</string>
    <string name="account_successfully_change_password">Your password has been successfully changed.</string>
    <string name="account_failure_change_password">Wrong current password.</string>
    <string name="transaction_list_view_start_station">Start station</string>
    <string name="transaction_list_view_planned_station">There is no planned station.</string>
    <string name="transaction_list_view_finish_station">There is no finish station.</string>
    <string name="transaction_list_view_start_time">Start time</string>
    <string name="transaction_list_view_planned_time">Planned time</string>
    <string name="transaction_list_view_finish_time">There is no finish time.</string>
    <string name="transaction_list_view_initial_cost">Initial cost</string>
    <string name="transaction_list_view_discount">There is no discount.</string>
    <string name="transaction_list_view_penalty">There is no penalty.</string>
    <string name="transaction_start_station">Start station: %1$s</string>
    <string name="transaction_planned_station">Planned station: %1$s</string>
    <string name="transaction_finish_station">Finish station: %1$s</string>
    <string name="transaction_start_time">Start time: %1$s</string>
    <string name="transaction_planned_time">Planned time: %1$s</string>
    <string name="transaction_finish_time">Finish time: %1$s</string>
    <string name="transaction_initial_cost">Initial cost: %1$s</string>
    <string name="transaction_discount">Discount value: %1$s</string>
    <string name="transaction_penalty">Penalty value: %1$s</string>
    <string name="transaction_finish_button">Finalize transaction</string>
    <string name="transaction_create_planned_station">Planned station:</string>
    <string name="transaction_create_discount_value">Discount percentage:</string>
    <string name="transaction_create_planned_time">Planned arrival time</string>
    <string name="transaction_create_card_pin">Card PIN</string>
    <string name="transaction_create_choose_discount">Select</string>
    <string name="transaction_create_choose_planned_station">Select</string>
    <string name="transaction_create_transaction">Create transaction</string>
    <string name="transaction_create_preview">Preview price</string>
    <string name="payment_card_number">Card number</string>
    <string name="payment_expiry_date">Expiry date</string>
    <string name="payment_first_name">First name</string>
    <string name="payment_last_name">Last name</string>
    <string name="payment_submit_button">Save</string>
    <string name="payment_method_missing">Your user does not currently have any payment details.</string>
    <string name="payment_method_found">Your user already has a payment method. You may replace it.</string>
    <string name="payment_empty_card_number">Card number cannot be empty.</string>
    <string name="payment_null_date">Expiry date cannot be empty.</string>
    <string name="payment_empty_first_name">First name cannot be empty.</string>
    <string name="payment_empty_last_name">Last name cannot be empty.</string>
    <string name="payment_invalid_date">Invalid date in input.</string>
    <string name="message_list_view_description">Message description</string>
    <string name="message_list_view_date">Message date</string>
    <string name="message_saved_payment_successfully">Successfully saved the payment details.</string>
    <string name="message_json_failure">There was an error while processing payment details.</string>
    <string name="api_failed_to_get_user_messages">Failed to get user messages.</string>
    <string name="api_success_to_get_user_messages">Successfully loaded user messages.</string>
    <string name="api_failed_to_get_user_reports">Failed to get user reports.</string>
    <string name="api_success_to_get_user_reports">Successfully loaded user reports.</string>
    <string name="api_failed_to_get_user_transactions">Failed to get user transactions.</string>
    <string name="api_success_to_get_user_transactions">Successfully loaded user transactions.</string>
    <string name="api_failed_to_get_bicycle_reports">Failed to get bicycle reports.</string>
    <string name="api_success_to_get_bicycle_reports">Successfully loaded bicycle reports.</string>
    <string name="api_failed_to_get_discounts">Failed to get discounts.</string>
    <string name="api_success_to_get_discounts">Successfully loaded discounts.</string>
    <string name="api_failed_to_get_station_bicycles">Failed to get station bicycles.</string>
    <string name="api_success_to_get_station_bicycles">Successfully loaded station bicycles.</string>
    <string name="api_secure_prefix">http://10.0.2.2:8085/api/secure</string>
    <string name="api_unsecure_prefix">http://10.0.2.2:8085/api/unsecure</string>
    <string name="api_generic_call_failure">Unexpected error while calling API.</string>
    <string name="api_successful_login">Successfully logged in.</string>
    <string name="api_failed_login">Wrong username or password.</string>
    <string name="api_failed_json_to_details">There was an error while processing user details.</string>
    <string name="api_failed_payment_save">Invalid payment details.</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_button_with_no_selected_city">Unable to login without a selected city.</string>
    <string name="login_to_register_button">Register</string>
    <string name="login_to_reset_button">Reset Password</string>
    <string name="login_city_choice">Select city</string>
    <string name="login_city_api_error">Could not get response from server for city list.</string>
    <string name="login_station_api_error">Could not get response from server for station list.</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="register_to_login_button">Return</string>
    <string name="reset_code_username">Username</string>
    <string name="reset_code_submit">Send reset code</string>
    <string name="reset_code_return_to_login">Return</string>
    <string name="reset_code_sent">Please check your email for the reset code.</string>
    <string name="reset_password_username">Username</string>
    <string name="reset_password_code">Reset code</string>
    <string name="reset_password_password">New password</string>
    <string name="reset_password_confirm_password">Confirm new password</string>
    <string name="reset_password_submit">Submit</string>
    <string name="reset_password_return_to_login">Return</string>
    <string name="report_hlv_report_description">Report description</string>
    <string name="report_hlv_report_severity">Report severity</string>
    <string name="report_hlv_inspection_description">The report has not been reviewed yet.</string>
    <string name="report_hlv_inspection_review">N/A</string>
    <string name="username_empty_warning">Username field cannot be empty.</string>
    <string name="username_length_warning">Username field must be between 5 and 30 characters.</string>
</resources>