<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/discountToStation"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/discount_lv_station_name" />

        <TextView
            android:id="@+id/discountValue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/discount_lv_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/discountEndTime"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/discount_lv_end_date" />

        <TextView
            android:id="@+id/discountNumberLeft"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/discount_lv_number_left" />

    </LinearLayout>

    <Button
        android:id="@+id/discountSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/bicycle_lv_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

</LinearLayout>