<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_hlv_report_description"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/report_hlv_report_description" />

        <TextView
            android:id="@+id/report_hlv_inspection_description"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/report_hlv_inspection_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="75"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_hlv_report_severity"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/report_hlv_report_severity" />

        <TextView
            android:id="@+id/report_hlv_inspection_review"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/report_hlv_inspection_review" />

    </LinearLayout>

</LinearLayout>